force-app/main/default/objects/KimbleOne__JourneyLocation__c/KimbleOne__JourneyLocation__c.object-meta.xml
<CustomObject>
    <label>Journey Location</label>
    <nameField>
        <label>Journey Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Journey Locations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>