force-app/main/default/objects/KimbleOne__JourneyLocation__c/fields/KimbleOne__BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BusinessUnit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Business Unit</label>
    <referenceTo>KimbleOne__BusinessUnit__c</referenceTo>
    <relationshipLabel>Journey Locations</relationshipLabel>
    <relationshipName>JourneyLocations</relationshipName>
    <type>Lookup</type>
</CustomField>