force-app/main/default/objects/KimbleOne__JourneyLocation__c/fields/KimbleOne__Resource__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Resource__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Resource</label>
    <referenceTo>KimbleOne__Resource__c</referenceTo>
    <relationshipLabel>Journey Locations</relationshipLabel>
    <relationshipName>JourneyLocations</relationshipName>
    <type>Lookup</type>
</CustomField>