force-app/main/default/objects/KimbleOne__JourneyLocation__c/listViews/KimbleOne__All1.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All1</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__ConfigCode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>